--- a/styles/typography.css
+++ b/styles/typography.css
@@ -8,7 +8,7 @@ body {
 	text-transform: uppercase;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
 	margin: 0;
 }
 
@@ -24,9 +24,10 @@ h2 {
 }
 
 p {
-	letter-spacing: 0.2rem;
+	letter-spacing: 0.15rem;
 	font-weight: 300;
 	font-size: 0.75rem;
+	line-height: 1.4rem;
 }
 
 @media screen and (min-width: 480px) {
